--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="container">
     <div class="calculator-grid">
       <div class="display">
-        <div class="previous">42</div>
-        <div class="current">22</div>
+        <div class="previous"></div>
+        <div class="current"></div>
       </div>
       <button data-operation>+</button>
       <button data-operation>-</button>
