--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
   <div class="container">
     <div class="calculator-grid">
-      <div class="display">
-        <div class="previous"></div>
-        <div class="current"></div>
-      </div>
+      <div class="display"></div>
       <button data-operation>+</button>
       <button data-operation>-</button>
       <button data-operation>*</button>
